maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: type mismatch;
 found   : (Int, Int)
 required: Int
  val x : Int = trouveDonut()
                           ^